# tivac-based-map-router

./: .gitignore  CMakeLists.txt  README.md  gps.c  gps.h  main.c  tiva.specs  tm4c123g.cmake  tm4c123g.ld
algorithm/: README.md  astar.py  fetch.py  graphHandler.py  kdtree.py  main.py  median.py  performance.py  priorityQueue.py  requirements.txt  utils.py
inc/: delay.h  distance.h  gpio.h  gps.h  lcd.h  uart.h
plotter/: plot.py  server.py
plotter/templates/: map_view.html  test.html
serial/: serial.ino
src/: delay.c  distance.c  gpio.c  gps.c  lcd.c  main.c  startup.c  uart.c
uart/: uart.c  uart.h
